css/scss/_theme-responsive.scss
//
// Theme Responsive
// @version 1.4
// @since 1.0
//
@import "variables";

// Smartphones
@media (max-width: 480px) {

    #wrapper,
    #footer {
        .container {
            padding-right: 0px;
            padding-left: 0px;
        }
    }

    .navbar-brand {
        float: none;
    }

    #hgroup {
        text-align: center;
    }

    #hgroup > * {
        float: none;
    }

    .imageyup #head-wrapper {
        padding: 0;
    }

    #header-widget .widget_search {
        box-sizing: border-box;
        margin-top: 20px;
        width: 100%;
    }

    #header.imageyup #logo #site-title a, #header.imageyup #logo #site-title {
        font-size: 1.25em;
        line-height: 1;
    }

    #header-widget .ad-billboard {
        margin: 0 auto;
        width: 92%;
        text-align: center;
    }

    .post .thumbnail img {
        width: 80px;
        height: auto;
    }

    .post .post-title {
        font-size: 2em;
        line-height: 1.2;
    }

    .entry-content embed, .entry-content iframe, .entry-content object,
    .entry-content p embed, .entry-content p iframe, .entry-content p object {
        max-width: 100%;
        height: 210px;
    }

    .entry-content .gallery img {
        max-width: 94%;
    }

    .author-box-image img {
        width: 50px;
        height: auto;
    }

    .post.format-status .post-header .entry-content, .fullwidth .post.format-status .post-header .entry-content {
        min-height: 60px;
    }

    .format-video embed, .format-video iframe, .format-video object {
        max-width: 100%;
    }

    .pager a {
        width: 100%;
        margin-bottom: 5px;
    }

    #archives-post-pager  {

        li, a {
            padding: 10px 0;
            width: 100%;
            float: none;
            text-align: center;
        }

        .previous {
            margin-bottom: 20px;
            display: inline-block;
        }
    }

    #sub-floor #credit {
        text-align: center;
    }

    #comment-form-avatar img {
        width: 20px;
        height: auto;
    }

    #sitemap-authors li {
        margin-right: 20px;
    }

    .mobile-2 {
        display: block;
        overflow: hidden;
        padding: 0;

        li {
            width: 48.93617021276595% !important;
            display: block;
            height: auto;
            float: left !important;

            &:nth-child(2n+2) {
                float: right !important;
            }
        }
    }
}

// tablet and mobile
@media (max-width: 979px) {

    .imageyup #hgroup {

        &.no-logo {
            position: absolute;
            margin: 0;
            padding: 0;
            width: 100%;
            text-align: center;
        }

        &.has-logo {
            position: relative;
            margin: 0 0 20px 0 !important;
            padding: 0;
            width: 100%;
            text-align: center;
        }

        > * {
            float: none;
        }
    }

    #header-widget .ad-billboard {
        margin-top: 10px;
    }

    .navbar ul.nav-menu {
        margin-top: 15px;
        padding-top: 10px;
        border-top: 1px solid $navigation-mobile-ul-border-color;

        > li a {
            padding: 10px 15px;

            .caret {
                display: none;
            }
        }
    }

    .nav-collapse .dropdown-menu {
        display: block;
        background: $navigation-mobile-dropdown-border-color;

        li.active a {
            color: $navigation-mobile-dropdown-active-item-color;

            &:hover {
                color: $navigation-mobile-dropdown-active-item-hover-color;
            }
        }

        > li a {
            box-shadow: none;
            border: none;

            &:hover {
                color: $navigation-mobile-dropdown-item-hover-color;
            }
        }
    }

    .format-aside {
        .entry-content {
            padding: 20px 20px 20px 60px
        }
    }

    .format-link .post-header {

        .post-title {
            font-size: 24px;
        }

        .fa-link {
            font-size: 32px;
        }
    }

    #comments .comment-container .comment-entry {
        margin-left: 5%;
        width: 85%;
    }
}

// mobile to tablet
@media only screen and (max-width: 767px) {

    #header.imageyup #logo #site-title a, #header.imageyup #logo #site-title {
        font-size: 1.25em;
        line-height: 1;
    }

    #header-widget .ad-billboard {
        margin: 0 auto;
        margin-top: 34px;
        width: 92%;
        text-align: center;
    }

    body {
        padding-right: 0;
        padding-left: 0;
    }

    .navbar-fixed-top {
        margin: 0;
    }

    .navbar .nav {
        margin-left: 0;
    }

    .container {
        padding-right: 20px;
        padding-left: 20px;
    }

    #footer #sub-floor {

        .container {
            padding-right: 0;
            padding-left: 0;
        }

        #footer-links {
            float: none;
            padding: 0 20px;
        }

        #credit {
            float: none;
            padding: 0 20px;
            text-align: center;
        }
    }

    .post.format-status .post-avatar {
        float: left;
        margin: 0 20px 20px 0;
    }
}

// default desktop
@media (min-width: 980px) {

    .navbar .navbar-nav > li {

        &:first-child {
            margin-left: -15px;
        }

        &:last-child {
            margin-right: -5px;
        }
    }

    .menu-header-container {
        width: 680px;
    }

    .submenu-show {
        position:absolute;
        left:100%;
        display:block;
        margin-top: -25px !important;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
        border-radius: 3px;
    }

    .submenu-hide {
        position: relative;
        top: auto;
        display: none !important;
        float: right;
    }
}

